Bug 73227 - FILESAVE : DOCX : File containing Image, SmartArt, Shape gets corrupt after Roundtrip
Summary: FILESAVE : DOCX : File containing Image, SmartArt, Shape gets corrupt after R...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-02 15:08 UTC by pallavi.jadhav
Modified: 2014-01-16 06:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Contains 1 Image, 1 SmartArt and 1 Shape (202.22 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-02 15:08 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-01-02 15:08:55 UTC
Created attachment 91424 [details]
Contains 1 Image, 1 SmartArt and 1 Shape

For the attached document,

Issue :
- File gets corrupt after Roundtrip.

Expected :
File should not get corrupt after Roundtrip.

Description of issue :
- File contains a page having 1 Image, 1 SmartArt and 1 Shape 
- Cause of corruption :- In document.xml, there is wrong sequence for xml tag <w:drawing>
- The sequence is :
  <w:r>
    <w:drawing></w:drawing>
    <mc:AlternateContent></mc:AlternateContent>
    <w:drawing></w:drawing>
  </w:r>
If changed this sequence to,
  <w:r>
    <mc:AlternateContent></mc:AlternateContent>
    <w:drawing></w:drawing>
    <w:drawing></w:drawing>
  </w:r>
then the file opens up without corruption.
- Shape comes under <mc:AlternateContent></mc:AlternateContent> tag.
- The problem exists only with the combination of following,
  a] Image, SmartArt, Shape
  b] SmartArt, Image, Shape
Comment 1 Jorendc 2014-01-02 16:43:33 UTC
I can confirm the file gets corrupt after RT, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 8102d45911bf3c47ce7ee15d3db89b0024c3bff8
TinderBox: Win-x86@39, Branch:master, Time: 2013-12-29_09:34:00 and MS Word 2010.

Thanks!
Kind regards,
Joren
Comment 2 Commit Notification 2014-01-10 14:35:59 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3a6fdd146a37a1dbdec56b6a1d4eff3a8a28a3f8

fdo#73227: Fix for corruption after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.