fdo#73227: Fix for corruption after RT

Issue:
	1] Document containing SmartArt inside <wp:anchor>
	   tag gets saved with <wp:inline>, due to which
	   value of attribute "id" of <wp:docPr> gets
           incorrectly written.
           Which was causing the corruption.
	2] LO was exporting SmartArt inside <wp:inline>
           bydefault. Hence "ids" of <wp:inline> and <wp:anchor>
           were same for value 1 and document gets corrupt.

	Implementation:
	1] Added code to export SmartArt inside <wp:anchor>
	   in DocxSdrExport::writeDiagram().
	2] Added export Unit test.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7292

Change-Id: I5b2efcba030d1736203cf4571d8498fd87600d79